# volunteer-ocr

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml
app/: main.py
